added gitignore, kwds

--- a/index.htm
+++ b/index.htm
@@ -3,9 +3,11 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="robots" content="index,follow" />
+		<meta name="description" content="Ambulancia poskytuje diagnostiku, terapiu a prevenciu všetkých druhov narušenej komunikačnej schopnosti u detí i dospelých na doporučenie obvodného lekára, detského alebo špecialistu. Ambulancia má zmluvu s poisťovňami Všeobecná zdravotná poisťovňa a Dôvera." />
+		<meta name="keywords" content="jana zitna, PhDr. Jana Žitná, Jana Žitná, logopédia, logopéd, logopédka, nitra, klinická logopédia, ambulancia klinickej logopédie" />
 		<!--<meta name="viewport" content="width=device-width; initial-scale=1.0;" />-->
 
-		<title>Ambulancia klinickej logopédie v Nitre — Jana Žitná</title>
+		<title>Ambulancia klinickej logopédie v Nitre — PhDr. Jana Žitná</title>
 
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
@@ -23,7 +25,7 @@
 							<div class="center_wrap"></div><div class="wrap">
 								<h2>Ambulancia klinickej logopédie v Nitre</h2>
 								<p>Ambulancia poskytuje diagnostiku, terapiu a prevenciu všetkých druhov narušenej komunikačnej schopnosti u detí i dospelých na doporučenie obvodného lekára, detského alebo špecialistu.</p>
-								<p>Ambulancia má zmluvu s poisťovňami: <a href="http://vysetrenie.zoznam.sk/ambulancia/4589/-phdr-jana-zitna">Všeobecná zdravotná poisťovňa</a> a <a href="http://poskytovatelia.dovera.sk/6322568/zitna-jana-phdr">Dôvera</a>.</p>
+								<p>Ambulancia má zmluvu s poisťovňami <a href="http://vysetrenie.zoznam.sk/ambulancia/4589/-phdr-jana-zitna">Všeobecná zdravotná poisťovňa</a> a <a href="http://poskytovatelia.dovera.sk/6322568/zitna-jana-phdr">Dôvera</a>.</p>
 								<div>
 									<b>Kontakt</b>
 								</div>
