--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta charset="utf-8">
 		<meta name="robots" content="index,follow" />
 		<meta name="description" content="Ambulancia poskytuje diagnostiku, terapiu a prevenciu všetkých druhov narušenej komunikačnej schopnosti u detí i dospelých na doporučenie obvodného lekára, detského alebo špecialistu. Ambulancia má zmluvu s poisťovňami Všeobecná zdravotná poisťovňa a Dôvera." />
 		<meta name="keywords" content="jana zitna, PhDr. Jana Žitná, Jana Žitná, logopédia, logopéd, logopédka, nitra, klinická logopédia, ambulancia klinickej logopédie" />
@@ -23,9 +23,9 @@
 					<div class="content side" style="background: url(back.jpg) center center;">
 						<div class="black">
 							<div class="center_wrap"></div><div class="wrap">
-								<h2>Ambulancia klinickej logopédie v Nitre</h2>
+								<h1>Ambulancia klinickej logopédie v Nitre</h1>
 								<p>Ambulancia poskytuje diagnostiku, terapiu a prevenciu všetkých druhov narušenej komunikačnej schopnosti u detí i dospelých na doporučenie obvodného lekára, detského alebo špecialistu.</p>
-								<p>Ambulancia má zmluvu s poisťovňami <a href="http://vysetrenie.zoznam.sk/ambulancia/4589/-phdr-jana-zitna">Všeobecná zdravotná poisťovňa</a> a <a href="http://poskytovatelia.dovera.sk/6322568/zitna-jana-phdr">Dôvera</a>.</p>
+								<p>Ambulancia má zmluvu s poisťovňami Všeobecná zdravotná poisťovňa, Dôvera a Union.</p>
 								<div>
 									<b>Kontakt</b>
 								</div>
@@ -43,37 +43,46 @@
 									<table>
 										<tr>
 											<td>pondelok</td>
-											<td class="">7.00</td>
+											<td class="">7:00</td>
 											<td>- 16:45</td>
 										</tr>
 										<tr>
 											<td>utorok</td>
-											<td>15.15</td>
-											<td>- 16.45</td>
+											<td>15:15</td>
+											<td>- 16:45</td>
 										</tr>
 										<tr>
 											<td>streda</td>
-											<td>7.00</td>
-											<td>- 16.45</td>
+											<td>7:00</td>
+											<td>- 16:45</td>
 										</tr>
 										<tr>
 											<td>štvrtok</td>
-											<td>15.15</td>
-											<td>- 16.45</td>
+											<td>15:15</td>
+											<td>- 16:45</td>
 										</tr>
 										<tr>
 											<td>piatok</td>
-											<td>7.00</td>
-											<td>- 16.30</td>
+											<td>7:00</td>
+											<td>- 16:30</td>
 										</tr>
 									</table>
-							</div><!-- /wrap -->
-						</div><!-- /black -->
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 
-			</div><!-- /td_full -->
+			</div>
+			<script>
+			  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+			  ga('create', 'UA-59825457-1', 'auto');
+			  ga('send', 'pageview');
+		</script>
 	</body>
 
 </html>
