use https in all links

--- a/index.htm
+++ b/index.htm
@@ -11,9 +11,9 @@
 
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700&amp;subset=latin' rel='stylesheet' type='text/css' />
-		<link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,400italic' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700&amp;subset=latin' rel='stylesheet' type='text/css' />
+		<link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,400italic' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
 			
 	</head>
 		
@@ -32,7 +32,7 @@
 
 								<div class="pad">
 									PhDr. Jana Žitná<br />
-									<a href="http://goo.gl/efPlRq" title="mapa Fatranská 12, Poliklinika Nitra">Fatranská 12, Poliklinika Nitra</a>
+									<a href="https://goo.gl/efPlRq" title="mapa Fatranská 12, Poliklinika Nitra">Fatranská 12, Poliklinika Nitra</a>
 									— 1. posch., č.d. 113<br/>
 									tel.: 0905 451 553<br/>
 									e-mail.: j.v.zitna (zavinac) gmail.com
