--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,7 @@
 	<body>
 		<div class="full">
 				<div class="wrap">
-					<div class="content side" style="background: url(back.jpg) center center;">
+					<div class="content side" style="background: url(back.png) center center;">
 						<div class="black">
 							<div class="center_wrap"></div><div class="wrap">
 								<h1>Ambulancia klinickej logopédie v Nitre</h1>
