--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
 		<title>Ambulancia klinickej logopédie v Nitre — PhDr. Jana Žitná</title>
 
 		<link rel="stylesheet" type="text/css" href="style.css" />
-		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 		<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700&amp;subset=latin' rel='stylesheet' type='text/css' />
 		<link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,400italic' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
@@ -78,7 +78,7 @@
 			  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 			  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+			  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
 			  ga('create', 'UA-59825457-1', 'auto');
 			  ga('send', 'pageview');
