add temporary ooo note

--- a/index.htm
+++ b/index.htm
@@ -1,88 +1,102 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="robots" content="index,follow" />
-		<meta name="description" content="Ambulancia poskytuje diagnostiku, terapiu a prevenciu všetkých druhov narušenej komunikačnej schopnosti u detí i dospelých na doporučenie obvodného lekára, detského alebo špecialistu. Ambulancia má zmluvu s poisťovňami Všeobecná zdravotná poisťovňa a Dôvera." />
-		<meta name="keywords" content="jana zitna, PhDr. Jana Žitná, Jana Žitná, logopédia, logopéd, logopédka, nitra, klinická logopédia, ambulancia klinickej logopédie" />
-		<!--<meta name="viewport" content="width=device-width; initial-scale=1.0;" />-->
 
-		<title>Ambulancia klinickej logopédie v Nitre — PhDr. Jana Žitná</title>
+<head>
+	<meta charset="utf-8">
+	<meta name="robots" content="index,follow" />
+	<meta name="description"
+		content="Ambulancia poskytuje diagnostiku, terapiu a prevenciu všetkých druhov narušenej komunikačnej schopnosti u detí i dospelých na doporučenie obvodného lekára, detského alebo špecialistu. Ambulancia má zmluvu s poisťovňami Všeobecná zdravotná poisťovňa a Dôvera." />
+	<meta name="keywords"
+		content="jana zitna, PhDr. Jana Žitná, Jana Žitná, logopédia, logopéd, logopédka, nitra, klinická logopédia, ambulancia klinickej logopédie" />
+	<!--<meta name="viewport" content="width=device-width; initial-scale=1.0;" />-->
 
-		<link rel="stylesheet" type="text/css" href="style.css" />
-		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-		<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700&amp;subset=latin' rel='stylesheet' type='text/css' />
-		<link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,400italic' rel='stylesheet' type='text/css'>
-		<link href='https://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
-			
-	</head>
-		
-	<body>
-		<div class="full">
-				<div class="wrap">
-					<div class="bg content side">
-						<div class="black">
-							<div class="center_wrap"></div><div class="wrap">
-								<h1>Ambulancia klinickej logopédie v Nitre</h1>
-								<p>Ambulancia poskytuje diagnostiku, terapiu a prevenciu všetkých druhov narušenej komunikačnej schopnosti u detí i dospelých na doporučenie obvodného lekára, detského alebo špecialistu.</p>
-								<p>Ambulancia má zmluvu s poisťovňami Všeobecná zdravotná poisťovňa, Dôvera a Union.</p>
-								<div>
-									<b>Kontakt</b>
-								</div>
+	<title>Ambulancia klinickej logopédie v Nitre — PhDr. Jana Žitná</title>
 
-								<div class="pad">
-									PhDr. Jana Žitná<br />
-									<a href="https://goo.gl/efPlRq" title="mapa Fatranská 12, Poliklinika Nitra">Fatranská 12, Poliklinika Nitra</a>
-									— 1. posch., č.d. 113<br/>
-									tel.: 0905 451 553<br/>
-									e-mail.: j.v.zitna (zavinac) gmail.com
-								</div>
-								
-								<div><b>Ordinačné hodiny</b><br/></div>
-								<div class="pad">
-									<table>
-										<tr>
-											<td>pondelok</td>
-											<td class="">7:00</td>
-											<td>- 16:45</td>
-										</tr>
-										<tr>
-											<td>utorok</td>
-											<td>15:15</td>
-											<td>- 16:45</td>
-										</tr>
-										<tr>
-											<td>streda</td>
-											<td>7:00</td>
-											<td>- 16:45</td>
-										</tr>
-										<tr>
-											<td>štvrtok</td>
-											<td>15:15</td>
-											<td>- 16:45</td>
-										</tr>
-										<tr>
-											<td>piatok</td>
-											<td>7:00</td>
-											<td>- 16:30</td>
-										</tr>
-									</table>
-								</div>
-							</div>
+	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700&amp;subset=latin' rel='stylesheet'
+		type='text/css' />
+	<link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,400italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
+
+</head>
+
+<body>
+	<div class="full">
+		<div class="wrap">
+			<div class="bg content side">
+				<div class="black">
+					<div class="center_wrap"></div>
+					<div class="wrap">
+						<h1>Ambulancia klinickej logopédie v Nitre</h1>
+						<p>Ambulancia poskytuje diagnostiku, terapiu a prevenciu všetkých druhov narušenej komunikačnej schopnosti u
+							detí i dospelých na doporučenie obvodného lekára, detského alebo špecialistu.</p>
+						<p>Ambulancia má zmluvu s poisťovňami Všeobecná zdravotná poisťovňa, Dôvera a Union.</p>
+						<div>
+							<b>Kontakt</b>
+						</div>
+
+						<div class="pad">
+							PhDr. Jana Žitná<br />
+							<a href="https://goo.gl/efPlRq" title="mapa Fatranská 12, Poliklinika Nitra">Fatranská 12, Poliklinika
+								Nitra</a>
+							— 1. posch., č.d. 113<br />
+							tel.: 0905 451 553<br />
+							e-mail.: j.v.zitna (zavinac) gmail.com
+						</div>
+
+						<div><b>Od 8.1. do 22.1. ambulancia neordinuje</b><br /></div>
+						<div class="pad">
+							Zastupuje Mgr. Adamická po telefonickom kontakte.
+						</div>
+
+						<div><b>Ordinačné hodiny</b><br /></div>
+						<div class="pad">
+							<table>
+								<tr>
+									<td>pondelok</td>
+									<td class="">7:00</td>
+									<td>- 16:45</td>
+								</tr>
+								<tr>
+									<td>utorok</td>
+									<td>15:15</td>
+									<td>- 16:45</td>
+								</tr>
+								<tr>
+									<td>streda</td>
+									<td>7:00</td>
+									<td>- 16:45</td>
+								</tr>
+								<tr>
+									<td>štvrtok</td>
+									<td>15:15</td>
+									<td>- 16:45</td>
+								</tr>
+								<tr>
+									<td>piatok</td>
+									<td>7:00</td>
+									<td>- 16:30</td>
+								</tr>
+							</table>
 						</div>
 					</div>
 				</div>
-
 			</div>
-			<script>
-			  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+		</div>
 
-			  ga('create', 'UA-59825457-1', 'auto');
-			  ga('send', 'pageview');
-		</script>
-	</body>
+	</div>
+	<script>
+		(function (i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date(); a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+		ga('create', 'UA-59825457-1', 'auto');
+		ga('send', 'pageview');
+	</script>
+</body>
 
 </html>
