--- a/src/index.htm
+++ b/src/index.htm
@@ -74,6 +74,8 @@
 				</div>
 
 			</div>
+			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCP_A_Qn1Pcv2SHU54Cs4WsNbUKl1s1bSI&callback=initMap" async defer></script>
+			<div id="map"></div>
 			<script>
 			  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
